Added searchSubOrgs to circumvent the bug in Pure API to get a list of child organizational units

--- a/Resources/Private/Templates/Paginate/Index.html
+++ b/Resources/Private/Templates/Paginate/Index.html
@@ -34,7 +34,8 @@
 			<f:if condition="{pagination.pages}">
 				<f:then>
           <div class="col-md-6 c-pagination__totalResults">
-            {f:translate(key:'pagination.totalItems')} {totalItems.from} {f:translate(key:'pagination.to')} {totalItems.to} {f:translate(key:'pagination.outOf')} {totalItems.totalItems}</div>
+			  <!--{f:translate(key:'pagination.outOf')} {totalItems.totalItems}-->
+            {f:translate(key:'pagination.totalItems')} {totalItems.from} {f:translate(key:'pagination.to')} {totalItems.to} </div>
           <div class="col-md-6">
 						<div class="pagination-container" style="display:flex;justify-content:flex-end;align-items:center;">
 							<div class="pagination">
