Added research-output for projects

--- a/univie_pure/Resources/Private/Partials/Pure/PressMedia.html
+++ b/univie_pure/Resources/Private/Partials/Pure/PressMedia.html
@@ -14,7 +14,7 @@
 		</div>
 		<div class="description"><f:format.html>{press.descriptions.0.value}</f:format.html></div>
 		<div class="references">{press.references.0.medium}</div>
-		<div><a href="{press.info.portalUrl}" target="_blank"><f:translate key="LLL:EXT:univie_pure/Resources/Private/Language/locallang.xlf:univiepur.more" /></a></div>
+		<div class="more"><a href="{press.info.portalUrl}" target="_blank"><f:translate key="LLL:EXT:univie_pure/Resources/Private/Language/locallang.xlf:univiepur.more" /></a></div>
 	</div>
 	<hr style="border-top: 1px solid #e4e4e4;" />
 </f:for>
