--- a/univie_pure/Resources/Private/Partials/Pure/Activities.html
+++ b/univie_pure/Resources/Private/Partials/Pure/Activities.html
@@ -18,7 +18,7 @@
 		<div class="period">
 			{activity.period.startDate.day}.{activity.period.startDate.month}.{activity.period.startDate.year} - {activity.period.endDate.day}.{activity.period.endDate.month}.{activity.period.endDate.year}
 		</div>
-		<div><a href="{activity.info.portalUrl}" target="_blank"><f:translate key="LLL:EXT:univie_pure/Resources/Private/Language/locallang.xlf:univiepur.more" /></a></div>
+		<div class="more"><a href="{activity.info.portalUrl}" target="_blank"><f:translate key="LLL:EXT:univie_pure/Resources/Private/Language/locallang.xlf:univiepur.more" /></a></div>
 	</div>
 	<hr style="border-top: 1px solid #e4e4e4;" />
 </f:for>
