--- a/univie_pure/Resources/Private/Partials/Pure/Publications.html
+++ b/univie_pure/Resources/Private/Partials/Pure/Publications.html
@@ -14,7 +14,7 @@
 								<div><em>{publication.publicationStatus.value}</em></div>
 							</f:if>
 						</f:if>
-						<div><f:link.action action="show" arguments="{uuid : publication.uuid, what2show:'publ'}"
+						<div class="more"><f:link.action action="show" arguments="{uuid : publication.uuid, what2show:'publ'}"
 							controller="Pure"
 							pageUid="{settings.singlePid}"><f:translate key="LLL:EXT:univie_pure/Resources/Private/Language/locallang.xlf:univiepur.more" /></f:link.action></div>
 						<hr style="border-top: 1px solid #e4e4e4;" />
@@ -31,7 +31,7 @@
 							<div><em>{publication.publicationStatus.value}</em></div>
 						</f:if>
 					</f:if>
-					<div><f:link.action action="show" arguments="{uuid : publication.uuid, what2show:'publ'}"
+					<div class="more"><f:link.action action="show" arguments="{uuid : publication.uuid, what2show:'publ'}"
 							controller="Pure"
 							pageUid="{settings.singlePid}"><f:translate key="LLL:EXT:univie_pure/Resources/Private/Language/locallang.xlf:univiepur.more" /></f:link.action></div>
 					<hr style="border-top: 1px solid #e4e4e4;" />
